# azure-kusto-python

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  .travis.yml  CHANGELOG.MD  CHANGELOG.md  CONTRIBUTING.md  README.md  TELEMETRY.md  azure-kusto-python.pyproj  azure-kusto-python.sln  back_to_black.bat  bench.py  build_packages.py  codecov.yml  dev_requirements.txt  dev_requirements_aio.txt  dev_requirements_pandas.txt  fix_monorepo.py  init.py  poetry.toml  pyproject.toml  setup.py  test.bat  test_cloud_settings_pytest.py  test_cloud_settings_standalone.py  test_normalizer.py
azure-kusto-data/: MANIFEST.in  README.rst  azure_bdist_wheel.py  poetry.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
azure-kusto-data/azure/: __init__.py
azure-kusto-data/azure/kusto/: __init__.py
azure-kusto-data/azure/kusto/data/: __init__.py  _aad_helper.py  _cloud_settings.py  _converters.py  _decorators.py  _kusto_client.py  _models.py  _request.py  _response.py  _telemetry.py  _token_providers.py  _utils.py  _version.py  aad_helper.py  client.py  client_base.py  client_details.py  client_request_properties.py  data_format.py  env_utils.py  exceptions.py  helpers.py  kcsb.json  kcsb.py  kusto_client.py  kusto_exceptions.py  kusto_trusted_endpoints.py  models.py  net.py  request.py  response.py  security.py  streaming_response.py  version.py  wellKnownKustoEndpoints.json
azure-kusto-data/azure/kusto/data/aio/: __init__.py  _models.py  client.py  request.py  response.py  security.py  streaming_response.py
azure-kusto-data/azure/kusto/data/asyncio/: utils.py
azure-kusto-data/setuptools-3.5.1/: CHANGES (links).txt  PKG-INFO  setup.cfg
azure-kusto-data/setuptools-3.5.1/.hg/: histedit-last-edit.txt  last-message.txt
azure-kusto-data/setuptools-3.5.1/py-1.4.20-py2.7.egg/EGG-INFO/: SOURCES.txt
azure-kusto-data/setuptools-3.5.1/setuptools/tests/svn_data/: svn13_ext_list.txt  svn13_info.xml  svn14_ext_list.txt  svn14_info.xml  svn15_ext_list.txt  svn15_ext_list.xml  svn15_info.xml  svn16_ext_list.txt  svn16_ext_list.xml  svn16_info.xml  svn17_ext_list.txt  svn17_ext_list.xml  svn17_info.xml  (+3 more)
azure-kusto-data/tests/: async_unittest.py  conftest.py  converter_test.py  e2e.py  functional_test.py  kusto_client_common.py  sample.py  sample_driver.py  security_common.py  test_client_request_properties.py  test_cloud_settings.py  test_converter.py  test_e2e.py  test_e2e_data.py  test_exceptions.py  test_functional.py  test_helpers.py  test_http_adapter_with_socket_options.py  test_kusto_client.py  test_kusto_connection_string_builder.py  test_models.py  test_security.py  test_streaming_query.py  test_telemetry.py  test_token_providers.py  test_well_known_kusto_endpoints.py
azure-kusto-data/tests/aio/: case.py  test_async_token_providers.py  test_kusto_client.py  test_security.py
azure-kusto-data/tests/auth/: README.txt  auth_e2e.py  set_auth_env.bat
azure-kusto-data/tests/input/: adminthenquery.json  dataframe.json  deft.json  deft_with_progressive_result.json  progressive_result.json  query_partial_results_defer_is_false.json  querypartialresults.json  test_token_providers.py  versionshowcommandresult.json  zero_results.json
azure-kusto-data/tests_data/: kusto_client_common.py  sample.py  test_converter.py  test_e2e_data.py  test_exceptions.py  test_functional.py  test_helpers.py  test_kusto_client.py  test_kusto_connection_string_builder.py  test_models.py  test_security.py  test_streaming_query.py  test_token_providers.py  test_well_known_kusto_endpoints.py
azure-kusto-data/tests_data/aio/: test_kusto_client.py
azure-kusto-data/tests_data/input/: alternative_order.json  deft.json  dynamic.json  null_values.json  pandas_bool.json  query_partial_results_defer_is_true.json
azure-kusto-ingest/: MANIFEST.in  README.md  README.rst  azure_bdist_wheel.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
azure-kusto-ingest/azure/kusto/: __init__.py
azure-kusto-ingest/azure/kusto/ingest/: __init__.py  _connection_string.py  _descriptors.py  _dict_utils.py  _ingest_client.py  _ingest_telemetry.py  _ingestion_blob_info.py  _ingestion_properties.py  _kusto_ingest_client.py  _ranked_storage_account.py  _resource_manager.py  _retry.py  _status.py  _status_q.py  _storage_account_set.py  _stream_extensions.py  _streaming_ingest_client.py  _version.py  base_ingest_client.py  connection_string.py  descriptors.py  exceptions.py  helpers.py  ingest_client.py  ingestion_blob_info.py  ingestion_properties.py  ingestion_result.py  ingestion_status.py  kusto_ingest_client.py  kusto_ingest_client_exceptions.py  managed_streaming_ingest_client.py  resource_manager.py  status.py  streaming_ingest_client.py  version.py
azure-kusto-ingest/src/azure/: __init__.py
azure-kusto-ingest/tests/: connection_string_test.py  descriptors_test.py  e2e.py  ingestion_blob_info_test.py  sample.py  test_connection_string.py  test_descriptors.py  test_e2e_ingest.py  test_ingest_telemetry.py  test_ingestion_blob_info.py  test_ingestion_properties.py  test_ingestion_v2.py  test_kusto_ingest_client.py  test_kusto_streaming_ingest_client.py  test_managed_streaming_ingest.py  test_status_q.py  test_storage_account_set.py
azure-kusto-ingest/tests/azure/: azure_e2e.py  run_test_from_github.py
azure-kusto-ingest/tests/input/: big.json  dataset.csv  dataset.tsv  identitytokenresult.json  ingestionresourcesresult.json  table_chunk.json
azure-kusto-ingest/tests_ingest/: common.py  test_descriptors.py  test_e2e_ingest.py  test_ingest_telemetry.py  test_kusto_ingest_client.py  test_kusto_streaming_ingest_client.py  test_managed_streaming_ingest.py  test_status_q.py
quick-start/: README.md  dataset.csv  dataset.json  kusto_sample_config.json  main.py  oneclick_instruction_box.md  pyproject.toml  requirements.txt  sample_app.py  utils.py
quick_start/: README.MD  README.md  dataset.csv  dataset.json  kusto_sample_app.py  kusto_sample_config.json  oneclick_instruction_box.md  pyproject.toml  requirements.txt  sample_app.py  setup.bat  utils.py
(+131 files in other folders)
