[project]
name = "azure-kusto-python"
version = "5.0.5"
description = "Microsoft Azure Kusto Python SDK"
dependencies = [
    "azure-kusto-data",
    "azure-kusto-ingest",
    "quick-start",
]
readme = "README.md"
requires-python = ">= 3.9"

[[project.authors]]
name = "Microsoft Corporation"
email = "kustalk@microsoft.com"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "responses>=0.25.8",
    "aioresponses>=0.7.8",
    "pytest-asyncio>=1.1.0",
    "asgiref>=3.9.1",
    "setuptools>=80.9.0",
    "ipython>=8.12.3",
    "pyarrow>=21.0.0",
    "pandas>=2.3.1",
    "ruff>=0.12.8",
    "basedpyright>=1.31.1",
]

[tool.uv]


[tool.uv.workspace]
members = ["azure-kusto-data", "azure-kusto-ingest"]

[tool.uv.sources]
azure-kusto-data = { workspace = true }
azure-kusto-ingest = { workspace = true }

[tool.ruff]
line-length = 160
target-version = 'py39'

[tool.ruff.lint]
ignore = ["E731"] # E731 - dont assign lambdas. 

[tool.ruff.lint.per-file-ignores]
"**/sample.py" = ["E402"] # module level import not at top of file (for samples)
"**/test_streaming_query.py" = ["F841"] # unused variable - for pytest raises

[tool.pytest.ini_options]
testpaths = ["azure-kusto-data/tests"]
addopts = ["-s", "--import-mode=importlib"]
pythonpath = ["."]