[project]
name = "azure-kusto-data"
version = "5.0.0"
description = "Kusto Data Client"
authors = [
    { name = "Microsoft Corporation", email = "kustalk@microsoft.com" },
]
license = "MIT"
readme = "README.rst"
urls = { "Repository" = "https://github.com/Azure/azure-kusto-python" }

dependencies = [
    "python-dateutil>=2.8.0",
    "requests>=2.13.0",
    "azure-identity>=1.5.0,<2",
    "msal>=1.9.0,<2",
    "ijson~=3.1",
    "azure-core>=1.11.0,<2"
]
requires-python = ">= 3.8"

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.3",
]
async = [
    "aiohttp>=3.9.3",
    "asgiref>=3.7.2",
]

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["azure"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
