[project]
name = "azure-kusto-data"
version = "5.0.3"
description = "Kusto Data Client"
authors = [
    { name = "Microsoft Corporation", email = "kustalk@microsoft.com" },
]
license = "MIT"
readme = "README.rst"
urls = { "Repository" = "https://github.com/Azure/azure-kusto-python" }

dependencies = [
    "python-dateutil>=2.8.0",
    "requests>=2.13.0",
    "azure-identity>=1.5.0,<2",
    "msal>=1.9.0,<2",
    "ijson~=3.1",
    "azure-core>=1.11.0,<2"
]
requires-python = ">= 3.9"

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.3",
]
async = [
    "aiohttp>=3.9.3",
    "asgiref>=3.7.2",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "data"
module-root = "azure/kusto"