[project]
name = "azure-kusto-data"
version = "6.0.1"
description = "Kusto Data Client"
authors = [
    { name = "Microsoft Corporation", email = "kustalk@microsoft.com" },
]
license = "MIT"
readme = "README.rst"
urls = { "Repository" = "https://github.com/Azure/azure-kusto-python" }

dependencies = [
    "python-dateutil>=2.9.0",
    "requests>=2.32.4",
    "azure-identity>=1.24.0,<2",
    "msal>=1.34.0b1,<2",
    "ijson~=3.4.0",
    "azure-core>=1.35.0,<2"
]
requires-python = ">= 3.9"
keywords = ["azure", "kusto", "data", "analytics"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.3.1",
]
aio = [
    "aiohttp>=3.12.15",
    "asgiref>=3.9.1",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "azure.kusto.data"
module-root = ""
