[project]
name = "azure-kusto-ingest"
version = "5.0.3"
description = "Kusto Ingest Client"
authors = [
    { name = "Microsoft Corporation", email = "kustalk@microsoft.com" },
]
dependencies = [
    "azure-kusto-data",
    # TODO - this has to be locked to this version due to https://github.com/Azure/azure-sdk-for-python/issues/40041
    "azure-storage-blob==12.23.0",
    "azure-storage-queue==12.12.0",
    "tenacity>=8.2.3",
]
readme = "README.rst"
requires-python = ">= 3.9"
license = "MIT"
keywords = ["azure", "kusto", "ingest", "data", "analytics"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
urls = { "Repository" = "https://github.com/Azure/azure-kusto-python" }

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.3",
]
aio = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/azure"]

