[tool.poetry]
name = "azure-kusto-quick-start"
version = "4.1.2"
readme = "README.md"
description="Kusto Data Client"
license="MIT"
authors= ["Microsoft <kustalk@microsoft.com>"]
urls={ "Project" = "https://github.com/Azure/azure-kusto-python"}
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
keywords=["kusto", "wrapper", "client", "azure", "data", "query", "ingest", "quick-start"]
packages = [
    { include = "*.py"},
]
include = [
    "*.csv",
    "*.json",
    "oneclick*",
]

[tool.poetry.dependencies]
python = "^3.7.1"
azure-kusto-data = { path = "../azure-kusto-data", develop = true }
azure-kusto-ingest = { path = "../azure-kusto-ingest", develop = true }
azure-core-tracing-opentelemetry = "^1.0.0b9"
azure-monitor-opentelemetry-exporter = "^1.0.0b12"
inflection = "^0.5.1"
opentelemetry-sdk = "^1.12.0"
tqdm = "^4.64.0"

[tool.poetry.extras]
pandas = ["pandas"]
aio = ["aiohttp", "asgiref"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
